fix: logos gap

--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -8,9 +8,9 @@
 .resources__logo-zone {
   padding: 80px 0 217px;
   display: flex;
-  gap: 0;
+  gap: 20px;
+  justify-content: center;
   flex-wrap: wrap;
-  justify-content: space-between;
   list-style-type: none;
 }
 
